--- a/src/common/styles/colors.css
+++ b/src/common/styles/colors.css
@@ -7,6 +7,7 @@
   --color-widget-background-pressed: #d9d9d9;
   --color-widget-border: #767676;
   --color-widget-border-pressed: #fff;
+  --color-widget-font-pressed: #323232;
 
   --color-font: #999;
 
