--- a/src/common/styles/global.css
+++ b/src/common/styles/global.css
@@ -24,3 +24,11 @@ body,
 .react-resizable-handle {
   background-image: none !important;
 }
+
+.widget {
+  width: 100%;
+  height: 100%;
+
+  box-sizing: border-box;
+  border-radius: 10px;
+}
