--- a/src/common/components/Widgets/Label/Label.module.css
+++ b/src/common/components/Widgets/Label/Label.module.css
@@ -1,9 +1,12 @@
 .label {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   user-select: none;
+  white-space: pre;
 
-  border: 1px solid var(--color-widget-border);
+  font-size: 20px;
+
+  border: 1px solid;
 }
