--- a/src/common/components/Widgets/Button/Button.module.css
+++ b/src/common/components/Widgets/Button/Button.module.css
@@ -1,6 +1,6 @@
 .button {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   user-select: none;
