--- a/src/common/styles/colors.css
+++ b/src/common/styles/colors.css
@@ -5,6 +5,7 @@
 
   --color-widget-background: #323232;
   --color-widget-background-pressed: #d9d9d9;
+  --color-widget-subbackground-pressed: #999999;
   --color-widget-border: #767676;
   --color-widget-border-pressed: #fff;
   --color-widget-font-pressed: #323232;
