--- a/src/common/components/Widgets/Scroll/Scroll.module.css
+++ b/src/common/components/Widgets/Scroll/Scroll.module.css
@@ -32,9 +32,8 @@
   box-sizing: border-box;
   border: 1px solid;
 
-  transition-property: border-color box-shadow background-color color;
+  transition-property: border-color background-color color;
   border-color: var(--color-widget-border);
-  box-shadow: none;
   background-color: var(--color-widget-background);
   color: var(--color-font);
   transition-duration: 200ms;
