fix for firefox vertical slider being inverted

--- a/src/common/components/Widgets/Slider/Slider.module.css
+++ b/src/common/components/Widgets/Slider/Slider.module.css
@@ -55,6 +55,8 @@
   writing-mode: vertical-lr;
   flex-grow: 1;
   background-color: transparent;
+
+  -moz-transform: rotate(180deg);
 }
 
 .slider input[type="range"]:focus {
