--- a/src/common/components/Widgets/Button/Button.module.css
+++ b/src/common/components/Widgets/Button/Button.module.css
@@ -1,18 +1,13 @@
 .button {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   user-select: none;
   white-space: pre;
 
   border: 1px solid;
 
-  transition-property: border-color box-shadow background-color color;
+  transition-property: border-color, box-shadow, background-color;
   border-color: var(--color-widget-border);
   box-shadow: none;
   background-color: var(--color-widget-background);
-  color: var(--color-font);
   transition-duration: 200ms;
 }
 
@@ -21,5 +16,49 @@
   box-shadow: 0px 0px 4px 0px #fff;
   background-color: var(--color-widget-background-pressed);
   color: var(--color-widget-font-pressed);
+  transition-duration: 0ms;
+}
+
+.button.toggle.pressed {
+  background-color: var(--color-widget-subbackground-pressed);
+}
+
+.label {
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  transition-property: color;
+  color: var(--color-font);
+  transition-duration: 200ms;
+}
+
+.button.pressed .label {
+  color: var(--color-widget-font-pressed);
+  transition-duration: 0ms;
+}
+
+.indicator {
+  position: absolute;
+  bottom: 5px;
+  left: 20px;
+  right: 20px;
+  height: 5px;
+
+  border: 1px solid;
+  border-radius: 10px;
+
+  transition-property: border-color;
+  border-color: var(--color-widget-border);
+  transition-duration: 200ms;
+  /* background-color: red; */
+}
+
+.button.pressed .indicator {
+  border-color: var(--color-widget-border-pressed);
   transition-duration: 0ms;
 }
