--- a/src/client/components/Nav/NavButton.module.css
+++ b/src/client/components/Nav/NavButton.module.css
@@ -9,7 +9,27 @@
   text-align: center;
 
   border-radius: 100%;
-  border: 1px solid var(--color-border);
+  border: 1px solid;
 
   user-select: none;
+  cursor: pointer;
+
+  transition-property: border-color, background-color, color;
+  background-color: var(--color-widget-background);
+  border-color: (--color-border);
+  color: var(--color-font);
+  transition-duration: 200ms;
+}
+
+.navButton:active {
+  border-color: var(--color-widget-border-pressed);
+  background-color: var(--color-widget-background-pressed);
+  color: var(--color-widget-font-pressed);
+  transition-duration: 0ms;
+}
+
+.navButton.active {
+  background-color: var(--color-widget-subbackground-pressed);
+  color: var(--color-widget-font-pressed);
+  font-weight: bold;
 }
