Added more options and now uses useBoard, some options still missing

--- a/src/common/components/DebugPanel/DebugPanel.module.css
+++ b/src/common/components/DebugPanel/DebugPanel.module.css
@@ -1,4 +1,14 @@
 .debugPanel,
 .debugPanel * {
   color: black;
+  font-size: 12px;
+}
+
+.deleteSelect {
+  width: 180px;
+}
+
+.numInput {
+  width: 40px;
+  font-weight: bold;
 }
