--- a/src/common/components/Widgets/Slider/Slider.module.css
+++ b/src/common/components/Widgets/Slider/Slider.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding: 15px;
 
   border: 1px solid;
   user-select: none;
@@ -13,6 +12,18 @@
   background-color: var(--color-widget-background);
   color: var(--color-font);
   transition-duration: 200ms;
+}
+
+.slider.large {
+  padding: 15px;
+}
+
+.slider.medium {
+  padding: 12px;
+}
+
+.slider.small {
+  padding: 9px;
 }
 
 .slider.pressed {
@@ -26,7 +37,6 @@
 .label {
   flex-shrink: 0;
   text-align: center;
-  font-size: 14px;
 
   display: flex;
   flex-direction: column;
@@ -53,6 +63,18 @@
 
 .userLabel {
   font-weight: bold;
+}
+
+.slider.large .label {
+  font-size: 14px;
+}
+
+.slider.medium .label {
+  font-size: 13px;
+}
+
+.slider.small .label {
+  font-size: 12px;
 }
 
 .slider input[type="range"] {
@@ -141,9 +163,11 @@
 
 .slider.horizontal input[type="range"]::-webkit-slider-thumb {
   width: 15px;
-  height: 45px;
   margin-left: 0;
-  margin-top: -19px;
+
+  /* Chrome seems to have inconsistent width and height of thumb in different range input orientations */
+  height: 40px;
+  margin-top: -17px;
 }
 
 .slider.pressed input[type="range"]::-webkit-slider-thumb {
